# haskell_netpbm

./: CHANGELOG.md  README.md  converted.pgm  haskellNetpbm.cabal
app/: ConvertNetPbm.hs  Main.hs  Netpbm.hs  ParserNetPbm.hs  TypesNetPbm.hs
pbm/: edit.pbm  img.ppm  pbm.hs  smile.pbm
pgm/: img.pgm  pgm.hs
ppm/: img.ppm  ppm.hs  wow.ppm
testImages/: brueghel.ppm  dummyFile  nightAscii.pgm  nightRaw.pgm  smileAscci.pbm  smileAscii.pbm  smileRaw.pbm  wowAscii.ppm  wowRaw.ppm
