cabal-version:      3.4
name:               haskellNetpbm
version:            0.1.0.2

-- A short (one-line) description of the package.
synopsis: Simple app for manipulating netpbm image files

-- A longer description of the package.
-- description:

license:            NONE
author:             Colin Trezise
maintainer:         ctrezise@asu.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskellNetpbm
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: TypesNetPbm, ParserNetPbm, ConvertNetPbm
    
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.2.0,
		              bytestring ^>= 0.10.12.0,
                      directory ^>= 1.3.6.0
    hs-source-dirs:   app
    default-language: Haskell2010
